Updated UI to Mordern Saas